# rubiks-solver

./: CMakeLists.txt  Notes.md
include/: cube.hpp  solver.hpp  util.hpp
resources/: half.tab  table1.pru  table2.pru  table3.pru  table4.pru
src/: cube.cpp  main.cpp  solver.cpp
